tests/hevm/pass/simple/simple.act
contract A

constructor()

iff

  CALLVALUE == 0

creates

  mapping (uint=>uint) x := []

transition f() : uint256

iff

  CALLVALUE == 0

  updates

    x := x[0 => 1]

  returns 1
